# liquid-staking

./: .gitignore  Cargo.toml  README.md  build_all.sh  config.json  deploy.sh  lib.rs  package.json  rust-toolchain.toml  swanky.config.json  test.sh  tsconfig.json
.devcontainer/: devcontainer.json
.devcontainer/scripts/: create-swanky-shared.sh  rust-setup.sh  swanky-setup.sh
accumulator/: Cargo.toml
adder/: Cargo.toml  lib.rs
artefacts/: issuer_staker.contract  issuer_staker.json  oracle_validators.contract  oracle_validators.json  validator_selector.contract  validator_selector.json
artefacts/contract/: dummy_issuer_staker.contract  dummy_issuer_staker.json  issuer_staker.contract  issuer_staker.json  oracle_validators.contract  oracle_validators.json  validator_selector.contract  validator_selector.json
contracts/accumulator/: Cargo.toml
contracts/accumulator/src/: lib.rs
contracts/adder/: Cargo.toml
contracts/adder/src/: lib.rs
contracts/diamond_caller/: Cargo.toml
contracts/diamond_caller/src/: lib.rs
contracts/dummy_issuer_staker/: Cargo.toml
contracts/dummy_issuer_staker/src/: lib.rs
contracts/issuer/: Cargo.toml
contracts/issuer/src/: lib.rs
contracts/issuer_facet_v1/: Cargo.toml
contracts/issuer_facet_v1/src/: lib.rs
contracts/issuer_staker/: Cargo.toml
contracts/issuer_staker/src/: lib.rs
contracts/oracle-validators/: Cargo.toml
contracts/oracle-validators/src/: lib.rs
contracts/oracle_validators/: Cargo.toml
contracts/oracle_validators/src/: lib.rs
contracts/staker/: Cargo.toml
contracts/staker/src/: lib.rs
contracts/staker_facet_v1/: Cargo.toml
contracts/staker_facet_v1/src/: lib.rs
contracts/subber/: Cargo.toml
contracts/subber/src/: lib.rs
contracts/validator_selector/: Cargo.toml
contracts/validator_selector/src/: lib.rs
contracts/validator_selector_standard/: Cargo.toml
contracts/validator_selector_standard/src/: lib.rs
doc/arch/: 0001-record-architecture-decisions.md  0002-validator-selector.md  0003-validator-selection-offchain-specification.md
docker/milestone1/: Dockerfile.buildcollator  Dockerfile.deploy  Dockerfile.offchain  Dockerfile.zombienet  README.md  compose.yaml
docker/milestone1/scripts/: build-and-deploy-collator.sh  build-and-deploy-contracts.sh  build-and-deploy-polkadot.sh  fetch-contracts.sh  fetch-validator-selector.sh  install-nodejs.sh  install-zombienet.sh  run-offchain.sh  run-zombienet.sh  single_parachain.toml
docker/milestone2/: Dockerfile.build  Dockerfile.deploydummy  Dockerfile.offchain  README.md  compose-dummy.yaml
docker/milestone2/scripts/: build-and-deploy-collator.sh  build-and-deploy-dummy.sh  functions.sh  install-cargo-contract.sh  install-nodejs.sh  launch-dummy.sh  single_parachain.toml
scripts/: deploy-diamond-and-facets.ts
scripts/include/: contract-operations.ts  curry-contract.ts
staking-frontend/: LICENSE.md  README.md  TODO.txt  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
staking-frontend/src/: utils.tsx
staking-frontend/src/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
staking-frontend/src/app/faq/: page.tsx
staking-frontend/src/app/staking/: page.tsx
staking-frontend/src/app/unstaking/: page.tsx
staking-frontend/src/app/validators/: page.tsx
staking-frontend/src/components/: Account.tsx  AccountListener.tsx  ChainBalance.tsx  ChainSwitcher.tsx  Claiming.tsx  ConfirmDialog.tsx  ConnectWallet.tsx  Footer.tsx  Header.tsx  Providers.tsx  Stake.tsx  Staking.tsx  Unstaking.tsx  UserBalance.tsx  ValidatorMetrics.tsx  ValidatorName.tsx  ValidatorSelector.tsx  Wallet.tsx  index.ts
staking-frontend/src/hooks/: index.ts  useNotifications.ts  useValidators.ts
staking-frontend/src/store/: index.ts
staking-frontend/src/styles/: globals.css
staking-frontend/src/types/: index.ts
staking-frontend/src/ui-kit/: Card.tsx  Modal.tsx  PageTitle.tsx  Spinner.tsx  TabGroup.tsx
staking-frontend/src/ui-kit/buttons/: Button.tsx  DropdownButton.tsx  index.ts
staking-frontend/src/ui-kit/notifications/: Notification.tsx  Notifications.tsx
subber/: Cargo.toml
test/accumulator/: index.test.ts
test/adder/: index.test.ts
test/staker/: index.test.ts
test/subber/: index.test.ts
validator-selector/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
validator-selector/src/: config.ts  contract.ts  main.ts  oracle.ts  types.ts  utils.ts  validators.ts
