[package]
name = "delegator"
version = "4.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

issuer = { path = "contracts/issuer", default-features = false, features = [
    "ink-as-dependency",
] }
staker = { path = "contracts/staker", default-features = false, features = [
    "ink-as-dependency",
] }

[dev-dependencies]
ink_e2e = { version = "4.1" }

[lib]
name = "delegator"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "issuer/std", "staker/std"]
ink-as-dependency = []
e2e-tests = []

[workspace]
members = ["contracts/*"]
