[package]
name = "delegator"
version = "4.1.0"
authors = ["Snowmead <michael.assaf.edge@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

issuer_facet_v1 = { path = "contracts/issuer_facet_v1", default-features = false, features = [
    "ink-as-dependency",
] }
staker_facet_v1 = { path = "contracts/staker_facet_v1", default-features = false, features = [
    "ink-as-dependency",
] }
diamond_caller = { path = "contracts/diamond_caller", default-features = false, features = [
    "ink-as-dependency",
] }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "^3.1.1", default-features = false, features = ["diamond", "ownable"] }

[dev-dependencies]
ink_e2e = { version = "4.1" }

[lib]
name = "delegator"
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "issuer_facet_v1/std", "staker_facet_v1/std", "diamond_caller/std", "openbrush/std"]
ink-as-dependency = []
e2e-tests = []

[workspace]
members = ["contracts/*"]
