[package]
name = "dummy_issuer_staker"
version = "0.1.0"
authors = ["Zabuxx <zabuxx@okalice.dev>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

assets_extension = { git = "https://github.com/swanky-dapps/chain-extension-contracts", default-features = false }
sp-arithmetic = { version = "16.0.0", default-features = false }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "assets_extension/std",    
]
ink-as-dependency = []
e2e-tests = []
