[package]
name = "issuer_facet_v1"
version = "4.1.0"
authors = ["Snowmead <michael.assaf.edge@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.1", default-features = false }
ink_env = { version = "4.1", default-features = false }
ink_prelude = { version = "4.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "^3.1.1", default-features = false, features = ["psp22", "ownable"] }

[lib]
name = "issuer_facet_v1"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = []
