[package]
name = "issuer_staker"
version = "1.0.0"
authors = ["Snowmead <michael.assaf.edge@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
    "derive",
], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.1.1", default-features = false, features = [
    "pausable",
    "psp22",
] }

dapps_staking_extension = { git = "https://github.com/swanky-dapps/chain-extension-contracts", default-features = false }
nomination-pool-staking-chain-extension-types = { path = "../../../astar-frame/chain-extensions/types/nomination-pool-staking", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
name = "issuer_staker"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "dapps_staking_extension/std",
    "nomination-pool-staking-chain-extension-types/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
