[package]
name = "staker_facet_v1"
version = "3.1.1"
authors = ["Snowmead <michael.assaf.edge@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.1.1", default-features = false, features = ["pausable", "psp22"] }

[dev-dependencies]
ink_e2e = "4.1.0"

[lib]
name = "staker_facet_v1"
path = "src/lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16