[package]
name = "validator_selector_standard"
version = "1.0.0"
authors = ["Snowmead <michael.assaf.edge@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
    "derive",
], optional = true }

# These dependencies
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "~3.1.1", default-features = false, features = [
    "pausable",
    "psp22",
] }

# This is a workaround to avoid any global_allocator conflicts
# https://substrate.stackexchange.com/questions/4733/error-when-compiling-a-contract-using-the-xcm-chain-extension/5767#5767
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, features = [
    "disable_panic_handler",
    "disable_oom",
    "disable_allocator",
] }

nomination-pool-staking-chain-extension-types = { path = "../../../astar-frame/chain-extensions/types/nomination-pool-staking", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
name = "validator_selector_standard"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "nomination-pool-staking-chain-extension-types/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
